remove biomage references

--- a/README.html
+++ b/README.html
@@ -191,9 +191,9 @@ summary {
 </div>
 
 
-<div id="biomage-pipeline" class="section level1">
-<h1>Biomage Pipeline</h1>
-<p>The Cellscope pipeline project for dependency-managed work processing.</p>
+<div id="cellenics-pipeline" class="section level1">
+<h1>Cellenics Pipeline</h1>
+<p>The Cellenics pipeline project for dependency-managed work processing.</p>
 <div id="getting-started" class="section level2">
 <h2>Getting started</h2>
 <p>The steps of the pipeline that are run through this project are started spontaneously on your machine as Docker containers, simulating Kubernetes in local development.</p>
